@@ -1,3 +1,8 @@
+2008-02-01  John W. Eaton  <jwe@octave.org>
+
+	* symtab.cc (Fset_variable, Fvariable_value):
+	New functions, but commented out for now.
+
 2008-01-30  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* graphics.h.in (axes::properties::get_transform_matrix,
